// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditableContentSubBlockRenderer Renders editable Markdown block correctly 1`] = `
<div>
  <div role="button"
       class="editableContent unsaved"
  >
    <div class="editableButton">
      <div class="editableButtonContent">
        <span class="govuk-button govuk-body-s govuk-!-margin-bottom-0">
          Edit this section
        </span>
        <button type="button"
                class="govuk-button govuk-button--warning govuk-body-s govuk-!-margin-bottom-0"
        >
          Delete this section
        </button>
      </div>
    </div>
    <div class="govuk-!-padding-left-1 govuk-!-padding-right-1">
      <p>
        test
      </p>
    </div>
  </div>
</div>
`;

exports[`EditableContentSubBlockRenderer Renders non-editable Markdown block correctly 1`] = `
<div>
  <div role="button"
       class="editableContent unsaved"
  >
    <div class="editableButton">
      <div class="editableButtonContent">
        <span class="govuk-button govuk-body-s govuk-!-margin-bottom-0">
          Edit this section
        </span>
      </div>
    </div>
    <div class="govuk-!-padding-left-1 govuk-!-padding-right-1">
      <p>
        test
      </p>
    </div>
  </div>
</div>
`;
